--- a/package.json
+++ b/package.json
@@ -1,13 +1,17 @@
 {
-  "name": "test-file-barc",
+  "name": "react-login-form",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@primer/octicons-react": "^17.3.0",
     "@testing-library/jest-dom": "^5.16.4",
-    "@testing-library/react": "^13.3.0",
+    "@testing-library/react": "^13.2.0",
     "@testing-library/user-event": "^13.5.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
+    "axios": "^0.19.2",
+    "react": "^18.1.0",
+    "react-bootstrap": "^2.4.0",
+    "react-dom": "^18.1.0",
+    "react-router-dom": "^5.1.2",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
   },
